intTests/test_type_errors/err053.saw
// Make sure deprecated types are hidden by default, and test
// the associated message.
//
// This can be anything deprecated; if you need to change it because
// the thing I picked finally gets removed, just update the reference
// file accordingly.

typedef t = __DEPRECATED__;
